--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.0",
+    "uuid": "^10.0.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
